ligolang/src/test/contracts/negative/error_function_annotation_1.mligo
let main (a:int) : unit = a
